<resources>
    <string name="app_name">PINPLE_AOS</string>

    <string name="menu_title_main">메인 지도</string>
    <string name="menu_title_place">서울시 장소 목록</string>
    <string name="menu_title_reminder">혼잡도 알림</string>
    <string name="menu_title_mypage">마이페이지</string>

    <string name="TabLayout">TabLayout</string>
    <string name="ViewPager">ViewPager</string>

    <string name="setting_reminder"><![CDATA[<b>설정된 알림</b>]]></string>
    <string name="notification_history"><![CDATA[<b>알림 기록</b>]]></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="des_check_button">확인 버튼</string>
    <string name="login_text_1">사람들이 많은 이곳저곳,</string>
    <string name="login_text_2">더 이상 당황하지 말아요.</string>
    <string name="landing1_text_1">서울 혼잡도 지도</string>
    <string name="landing1_text_2">서울 장소 50곳에 대한 실시간 혼잡도를 \n 지도를 통해 한 눈에 확인해보세요!</string>
    <string name="landing2_text_1">혼잡도 공유하기</string>
    <string name="landing2_text_2">지도에 핀을 올려 현재 위치한 장소의 \n혼잡도와 나의 기분을 공유할 수 있어요!</string>
    <string name="landing3_text_1">혼잡도 알림 설정</string>
    <string name="landing3_text_2">방문하고자 하는 장소와 시간을 설정하고\n 앱을 킬 필요없이 혼잡도 알림을 받아보세요!</string>
    <string name="setting_name_1">어서오세요! \n어떻게 불러드릴까요?</string>
    <string name="edit_text">10자 내로 닉네임을 입력해주세요.</string>
    <string name="setting_name">닉네임을 설정해주세요!\n닉네임은 핀, 댓글 작성에 사용되며 추후 변경할 수 없어요.</string>

    <string name="pin_step1_text">STEP1 체감 혼잡도 선택하기</string>
    <string name="pin_step1_text2">현재 위치에서 사람이 \n어느정도로 많이 있나요?</string>
    <string name="pin_step2_text">STEP2 감정 공유하기</string>
    <string name="pin_step2_text2">지금 혼잡도에 대해 \n어떤 감정이신가요?</string>
    <string name="pin_step3_text">STEP3 상세하게 핀 작성하기</string>
    <string name="pin_step3_text2">더 공유하고 싶은 \n상황이 있나요?</string>
    <string name="pin_step3_guide_text">작성된 핀은 신뢰도를 위해 6시간 후 지도에서 사라져요</string>
    <string name="pin_caution_text1">핀 작성시 주의사항</string>
    <string name="pin_caution_text2">부적절한 내용의 핀을 게재하시면 서비스 이용이 정지됩니다.</string>
    <string name="pin_location_text">현재 위치</string>
    <string name="main_reminder_button_text">알림 설정하기</string>
</resources>
