<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingNameActivity">

    <ImageView
        android:id="@+id/indicator_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/indicator_step1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/setting_name_1"
        android:textColor="@color/color_main_black"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/indicator_1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:fontFamily="@font/pretendard_regular"
        android:text="@string/setting_name"
        android:textColor="@color/color_gray_dark"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/setting_name_edit_text" />


    <EditText
        android:id="@+id/NickName"
        android:layout_width="244dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/pretendard_regular"
        android:hint="@string/edit_text"
        android:maxLength="10"
        android:focusable="true"
        android:textSize="12dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13">

        <ImageButton
            android:id="@+id/button_check_activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/button_check" />

        <ImageButton
            android:id="@+id/button_check_disabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/button_check_disabled" />


    </FrameLayout>

    <TextView
        android:id="@+id/text_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 / 10"
        android:textSize="12dp"
        android:fontFamily="@font/pretendard_regular"
        android:textColor="@color/color_gray3"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />


</androidx.constraintlayout.widget.ConstraintLayout>